[package]
name = "unnamed_economy_game"
version = "0.1.0"
authors = ["Jacob Lundgren <jacob.a.lundgren@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.27.0"
enum-iterator = "2.1.0"
ordered-float = "4.2.2"
pathfinding = "4.10.0"
rand = "0.8.3"
rand_distr = "0.4.0"
ratatui = { version = "0.27.0", features = ["termion"] }
termion = "4.0.2"
